--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
     <section id="buscadorestudiantes">
         <div class="buscadorestudiantes">    
             <h2>Estos son nuestros estudiantes</h2>
+            <button onclick="cargarFormularioEstudiantes()">click</button>
             <br>
             <p>Aquí puedes buscar los estudiantes que pertenecen a nuestra institución. Sus horarios y demás.</p>
         </div>
@@ -170,9 +171,11 @@
         <div class="informaciongeneral"></div>
         <h2>Buscador general</h2>
         <h3> Aqui podras ver toda la informacion general</h3>
+        <button onclick="mostrarListado()">Ver estudiantes</button>
     </section>
 
     <script src="js/departamentos.js"></script>
     <script src="js/personas.js"></script>
     <script src="js/asignaturas.js"></script>
     <script src="js/periodos.js"></script>
+    <script src="js/estudiantes.js"></script>
