--- a/index.html
+++ b/index.html
@@ -151,14 +151,12 @@
         </section>     
     </section>
 
-    <section id="buscadorestudiantes">
-        <div class="buscadorestudiantes">    
-            <h2>Estos son nuestros estudiantes</h2>
-            <button onclick="cargarFormularioEstudiantes()">click</button>
-            <br>
-            <p>Aquí puedes buscar los estudiantes que pertenecen a nuestra institución. Sus horarios y demás.</p>
-        </div>
-    </section>    
+    <section id="alumnos">
+        <h2>Módulo de alumnos</h2>
+        <div id="alumnos-form"></div>
+        <div id="listado-alumnos"></div>
+        <button onclick="mostrarListado()">Ver estudiantes</button>
+     </section>
 
     <section id="ingresoprofesores">
         <div class="buscadorprofesores">
@@ -178,4 +176,4 @@
     <script src="js/personas.js"></script>
     <script src="js/asignaturas.js"></script>
     <script src="js/periodos.js"></script>
-    <script src="js/estudiantes.js"></script>
+    <script src="js/alumnos.js"></script>
