--- a/index.html
+++ b/index.html
@@ -158,22 +158,15 @@
         <button onclick="mostrarListado()">Ver estudiantes</button>
      </section>
 
-    <section id="ingresoprofesores">
-        <div class="buscadorprofesores">
-            <h2> Bienvenidos docentes</h2>
-            <p> Aqui puedes ver tus materias asignadas</p>
-        </div>
-    </section>
-
-    <section id="vertodo">
-        <div class="informaciongeneral"></div>
-        <h2>Buscador general</h2>
-        <h3> Aqui podras ver toda la informacion general</h3>
+     <section id="periodos">
+        <h2>Módulo de periodos</h2>
+        <div id="-form"></div>
+        <div id="listado-alumnos"></div>
         <button onclick="mostrarListado()">Ver estudiantes</button>
-    </section>
+     </section>
 
+    <script src="js/alumnos.js"></script>
     <script src="js/departamentos.js"></script>
     <script src="js/personas.js"></script>
     <script src="js/asignaturas.js"></script>
     <script src="js/periodos.js"></script>
-    <script src="js/alumnos.js"></script>
