--- a/index.html
+++ b/index.html
@@ -30,15 +30,6 @@
 
     <section id="generadordematricula">
         <div class="matricula"> 
-            <div id="periodos-academicos">
-                <h2>Selección de Periodos Académicos</h2>
-                <select id="periodos">
-                    <option value="1">Periodo 1</option>
-                    <option value="2">Periodo 2</option>
-                    <option value="3">Periodo 3</option>
-                    <option value="4">Periodo 4</option>
-                </select>
-            </div>
         
             <div id="programas">
                 <h2>Selección de Programas Académicos</h2>
@@ -155,18 +146,18 @@
         <h2>Módulo de alumnos</h2>
         <div id="alumnos-form"></div>
         <div id="listado-alumnos"></div>
-        <button onclick="mostrarListado()">Ver estudiantes</button>
+        <button onclick="mostrarListadoAlumnos()">Ver estudiantes</button>
      </section>
 
      <section id="periodos">
         <h2>Módulo de periodos</h2>
-        <div id="-form"></div>
-        <div id="listado-alumnos"></div>
-        <button onclick="mostrarListado()">Ver estudiantes</button>
+        <div id="periodos-form"></div>
+        <div id="listado-periodos"></div>
+        <button onclick="mostrarListadoPeriodos()">Ver periodos</button>
      </section>
 
     <script src="js/alumnos.js"></script>
     <script src="js/departamentos.js"></script>
-    <script src="js/personas.js"></script>
+    <!-- <script src="js/personas.js"></script> -->
     <script src="js/asignaturas.js"></script>
     <script src="js/periodos.js"></script>
