--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         </div>
     </section>
  
-
     <section id="Programasacademicos">
         <h2>Estos son nuestros programas académicos</h2>
         <section id="cajasprogramas">
@@ -116,15 +115,21 @@
 
      <section id="programas">
         <h2>Módulo de programas</h2>
-        <div id="departamentos-form"></div>
-        <div id="listado-departamentos"></div>
-        <button onclick="mostrarListadoDepartamentos()">Ver Departamentos</button>
+        <div id="programas-form"></div>
+        <div id="listado-programas"></div>
+        <button onclick="cargarFormularioProgramas()">Ver programas</button>
      </section>
+     <section id="creadorDeAsignaturas">
+        <h2>crear nueva asignatura </h2>
+        <div id="asignaturas-crear"></div>  
+        <div id="listado-asignaturas"></div>
+    </section>
 
     <script src="js/alumnos.js"></script>
     <script src="js/departamentos.js"></script>
     <!-- <script src="js/personas.js"></script> -->
     <script src="js/asignaturas.js"></script>
     <script src="js/periodos.js"></script>
+    <script src="js\programas.js"></script>
     <script src="js/app.js"></script>
 
