--- a/index.html
+++ b/index.html
@@ -101,35 +101,45 @@
 
      <section id="periodos">
         <h2>Módulo de periodos</h2>
-        <div id="periodos-form"></div>
         <div id="listado-periodos"></div>
-        <button onclick="mostrarListadoPeriodos()">Ver periodos</button>
      </section>
 
      <section id="departamentos">
         <h2>Módulo de Departamentos</h2>
-        <div id="departamentos-form"></div>
         <div id="listado-departamentos"></div>
-        <button onclick="mostrarListadoDepartamentos()">Ver Departamentos</button>
      </section>
 
      <section id="programas">
         <h2>Módulo de programas</h2>
-        <div id="programas-form"></div>
         <div id="listado-programas"></div>
-        <button onclick="cargarFormularioProgramas()">Ver programas</button>
      </section>
-     <section id="creadorDeAsignaturas">
-        <h2>crear nueva asignatura </h2>
+
+    <section id="creadorDeAsignaturas">
         <div id="asignaturas-crear"></div>  
         <div id="listado-asignaturas"></div>
     </section>
 
+    <section id="matriculas">
+        <h2>crear nueva matricula </h2>
+        <div id="matriculas-crear"></div>  
+        <div id="listado-matriculas"></div>
+    </section>
+
+    <section id="tarifas">
+        <h2>crear nueva tarifas </h2>
+        <div id="tarifas-crear"></div>  
+        <div id="listado-tarifas"></div>
+    </section>
+
+    <section id="salones">
+        <h2>salones</h2>
+        <div id="salones-crear"></div>  
+        <div id="listado-salones"></div>
+    </section>
     <script src="js/alumnos.js"></script>
-    <script src="js/departamentos.js"></script>
-    <!-- <script src="js/personas.js"></script> -->
+    <script src="js/Listados.js"></script>
     <script src="js/asignaturas.js"></script>
-    <script src="js/periodos.js"></script>
-    <script src="js\programas.js"></script>
     <script src="js/app.js"></script>
+    <script src="js\matriculas.js"></script>
+
 
