--- a/index.html
+++ b/index.html
@@ -85,12 +85,17 @@
         </nav> -->
     </header>
 
-    <section id="inicio">
-        <div class="image">
-            <img src="Img/Captura desde 2024-03-06 16-10-37.png" alt="">
+    <section id="inicio" class="inicio-section">
+        <div class="inicio-container">
+            <div class="texto">
+                <h2>Una universidad de calidad</h2>
+            </div>
+            <div class="image">
+                <img src="Img/Captura desde 2024-03-06 16-10-37.png" alt="">
+            </div>
         </div>
-        <div class="texto"><h2>Una universidad de calidad</h2></div>    
     </section>
+    
  
     <section id="Programasacademicos">
             <div class="box-container">
