--- a/index.html
+++ b/index.html
@@ -159,7 +159,12 @@
             </div>    
     </section>
 
-    
+    <section id="institucion">
+        <h2>Nuestra institución</h2>
+        <div class="image2">
+            <img src="Img\WhatsApp Image 2024-03-10 at 5.55.41 PM.jpeg" alt="">
+        </div>
+    </section>
 
      <section id="periodos">
         <h2>Módulo de periodos</h2>
