--- a/index.html
+++ b/index.html
@@ -175,7 +175,11 @@
 
 
 
-
+    <section id="profesores">
+        <h2>Profesores</h2>
+        <div id="profesores-crear"></div>
+        <div id="listado-profesores"></div>
+    </section>
     
 
      <section id="programas">
@@ -208,6 +212,7 @@
     <script src="js/alumnos.js"></script>
     <script src="js/Listados.js"></script>
     <script src="js/asignaturas.js"></script>
+    <script src="js/profesores.js"></script>
     <script src="js/app.js"></script>
     <script src="js\matriculas.js"></script>
 
