--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
      </section>
 
      <section id="tarifas">
-        <h2>crear nueva tarifas </h2>
+        <h2>Tarifas </h2>
         <div id="tarifas-crear"></div>  
         <div id="listado-tarifas"></div>
         <div id="listaTarifas2"></div>
