--- a/index.html
+++ b/index.html
@@ -187,12 +187,7 @@
         <div id="listado-programas"></div>
      </section>
 
-    <div class="crear">
-    <section id="creadorDeAsignaturas">
-        <div id="asignaturas-crear"></div>  
-        <div id="listado-asignaturas"></div>
-    </section>
-    </div>
+    
 
     <section id="matriculas">
         <h2>crear nueva matricula </h2>
@@ -206,13 +201,20 @@
         <div id="listado-alumnos"></div>
     </section>
 
+    <div class="crear">
+        <section id="creadorDeAsignaturas">
+            <div id="asignaturas-crear"></div>  
+            <div id="listado-asignaturas"></div>
+        </section>
+        </div>
    
 </body>
     <script src="js/utils.js"></script>
     <script src="js/alumnos.js"></script>
     <script src="js/Listados.js"></script>
-    <script src="js/asignaturas.js"></script>
+    <script src="js\salones.js"></script>
     <script src="js/profesores.js"></script>
+    <script src="js\asignaturas.js"></script>
     <script src="js/app.js"></script>
     <script src="js\matriculas.js"></script>
 
